--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
-    "next": "15.5.6",
+    "next": "^16.0.1",
     "qs": "^6.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -25,9 +25,9 @@
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20",
     "@types/qs": "^6.14.0",
-    "@types/react": "^19",
+    "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   }
 }
