--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.10",
     "tailwindcss": "^4",
     "typescript": "^5.9.3"
   }
